tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-2/apigateway-get-rest-apis.json
{
    "items": [
        {
            "apiKeySource": "HEADER",
            "createdDate": "2020-07-07T15:09:32+00:00",
            "disableExecuteApiEndpoint": false,
            "endpointConfiguration": {
                "types": [
                    "REGIONAL"
                ]
            },
            "id": "ucr0fzaxk3",
            "name": "ivan-manual-test"
        }
    ]
}
