tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-2/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-079dc494b1d72178f"
                }
            ],
            "InternetGatewayId": "igw-03b21d0a6db44780a",
            "OwnerId": "167389268608",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "devops"
                },
                {
                    "Key": "Name",
                    "Value": "devops-vpc"
                }
            ]
        },
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-0150c879"
                }
            ],
            "InternetGatewayId": "igw-9fa865e6",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
