tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-2/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0d6286179f5ef751d",
                    "RouteTableId": "rtb-034be3ae1c80975a1",
                    "SubnetId": "subnet-06510375cd674289f"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0aff0b0c1aa7b9cd8",
                    "RouteTableId": "rtb-034be3ae1c80975a1",
                    "SubnetId": "subnet-0ee397a8335816b9b"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-034be3ae1c80975a1",
            "Routes": [
                {
                    "DestinationCidrBlock": "141.149.77.207/23",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "GatewayId": "igw-03b21d0a6db44780a",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "devops-vpc-public"
                },
                {
                    "Key": "Environment",
                    "Value": "devops"
                }
            ],
            "VpcId": "vpc-079dc494b1d72178f"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0a30f0bca45a86c87",
                    "RouteTableId": "rtb-0efc26b8bab27b626",
                    "SubnetId": "subnet-0cfa0456526e2068d"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-04be762981f1c6713",
                    "RouteTableId": "rtb-0efc26b8bab27b626",
                    "SubnetId": "subnet-02cdeef1c52041c9d"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0efc26b8bab27b626",
            "Routes": [
                {
                    "DestinationCidrBlock": "141.149.77.207/23",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "NatGatewayId": "nat-00640d43d434d1901",
                    "Origin": "CreateRoute",
                    "State": "blackhole"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "devops-vpc-private"
                },
                {
                    "Key": "Environment",
                    "Value": "devops"
                }
            ],
            "VpcId": "vpc-079dc494b1d72178f"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-73cf940e",
                    "RouteTableId": "rtb-da480da1"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-da480da1",
            "Routes": [
                {
                    "DestinationCidrBlock": "6.168.104.159/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "GatewayId": "igw-9fa865e6",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0150c879"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0b230f1456ecfb40d",
                    "RouteTableId": "rtb-0fb2f206c50d6a96c"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0fb2f206c50d6a96c",
            "Routes": [
                {
                    "DestinationCidrBlock": "141.149.77.207/23",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-079dc494b1d72178f"
        }
    ]
}
