tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-2/ec2-describe-transit-gateway-route-tables.json
{
    "TransitGatewayRouteTables": [
        {
            "CreationTime": "2020-07-08T16:06:10+00:00",
            "DefaultAssociationRouteTable": true,
            "DefaultPropagationRouteTable": true,
            "State": "available",
            "Tags": [],
            "TransitGatewayId": "tgw-0ffb61719f09a3bad",
            "TransitGatewayRouteTableId": "tgw-rtb-0e15ee654a543a6da"
        }
    ]
}
