tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-2/ec2-describe-transit-gateways.json
{
    "TransitGateways": [
        {
            "CreationTime": "2020-07-08T16:05:24+00:00",
            "Options": {
                "AmazonSideAsn": 64512,
                "AssociationDefaultRouteTableId": "tgw-rtb-0e15ee654a543a6da",
                "AutoAcceptSharedAttachments": "disable",
                "DefaultRouteTableAssociation": "enable",
                "DefaultRouteTablePropagation": "enable",
                "DnsSupport": "enable",
                "MulticastSupport": "disable",
                "PropagationDefaultRouteTableId": "tgw-rtb-0e15ee654a543a6da",
                "VpnEcmpSupport": "enable"
            },
            "OwnerId": "167389268608",
            "State": "available",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Peer TGW"
                }
            ],
            "TransitGatewayArn": "arn:aws:ec2:us-west-2:167389268608:transit-gateway/tgw-0ffb61719f09a3bad",
            "TransitGatewayId": "tgw-0ffb61719f09a3bad"
        },
        {
            "CreationTime": "2020-12-09T13:29:01+00:00",
            "Description": "Connect Cloudrail VPCs together",
            "Options": {
                "AmazonSideAsn": 64512,
                "AssociationDefaultRouteTableId": "tgw-rtb-0d367f61c437e4ad6",
                "AutoAcceptSharedAttachments": "enable",
                "DefaultRouteTableAssociation": "enable",
                "DefaultRouteTablePropagation": "enable",
                "DnsSupport": "enable",
                "MulticastSupport": "disable",
                "PropagationDefaultRouteTableId": "tgw-rtb-0d367f61c437e4ad6",
                "VpnEcmpSupport": "enable"
            },
            "OwnerId": "645376637575",
            "State": "available",
            "Tags": [],
            "TransitGatewayArn": "arn:aws:ec2:us-west-2:645376637575:transit-gateway/tgw-0d19fc27b22010f90",
            "TransitGatewayId": "tgw-0d19fc27b22010f90"
        }
    ]
}
