tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-2/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "141.149.77.207/23",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-02c4bddfcc63bbfc1",
                    "CidrBlock": "141.149.77.207/23",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-00b92878",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "167389268608",
            "State": "available",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "devops"
                },
                {
                    "Key": "Name",
                    "Value": "devops-vpc"
                }
            ],
            "VpcId": "vpc-079dc494b1d72178f"
        },
        {
            "CidrBlock": "6.168.104.159/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-c2ab9ca8",
                    "CidrBlock": "6.168.104.159/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-00b92878",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "167389268608",
            "State": "available",
            "VpcId": "vpc-0150c879"
        }
    ]
}
